--- a/WebAPIGameTable/Views/Account/Register.cshtml
+++ b/WebAPIGameTable/Views/Account/Register.cshtml
@@ -82,7 +82,7 @@
 }
 
 <div>
-    @Html.ActionLink("Login", "Login")
+    @Html.ActionLink("Sign in", "Login")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
