--- a/WebAPIGameTable/Views/Shared/_Layout.cshtml
+++ b/WebAPIGameTable/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 @Html.ActionLink("Ratings", "IndexRating", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/Account/Login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="/Account/Login"><span class="glyphicon glyphicon-log-in"></span> Sign Off</a></li>
             </ul>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
