--- a/WebAPIGameTable/Views/Account/Login.cshtml
+++ b/WebAPIGameTable/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-success" />
+                <input type="submit" value="Sign in" class="btn btn-success" />
             </div>
         </div>
     </div>
